fixed some issued with alignment, added some content

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,16 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css");
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js');
-@import url('https://cnd.jsdelivr.net/npm/bootsrap@5.1.3/dist/css/bootstrap.min.css');
+/* @import url('https://cnd.jsdelivr.net/npm/bootsrap@5.1.3/dist/css/bootstrap.min.css'); */
+
+
+.bg-cover {
+  background-image: url('../asst/images/body.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Keeps the image from scrolling with the page */
+}
 
 body {
     /* background-image: url("../asst/images/body.webp"); */
@@ -12,13 +21,11 @@ body {
     background-color: #f4f4f4;
 }
 
-h2{
-    text-indent: 50px;
+h1 {
+    text-align: center;
 }
-
-h3{
+h2, h3{
     text-indent: 50px;
-    /* color: red; */
 }
 
 .cards-wrapper {
@@ -63,7 +70,7 @@ p {
 }
 
 .container {
-    padding-top: 60px;
+    padding-top: 10px;
 }
 
 .object-fit-contain {
